# sdfs

./: .gitignore  CMakeLists.txt  README.md  build.sh  sdfs-client.c  sdfs-client.conf  sdfs-server.c  sdfs-server.conf  sdfs.h
certs/: cacert.pem  sdfs-client.crt  sdfs-client.key  sdfs-server.crt  sdfs-server.key
config/: sdfs-client.conf  sdfs-server.conf
crypto/: encrypt.c  encrypt.h  mac.c  mac.h  pki.c  pki.h  tls.c  tls.h
file/: file-permission.txt
network/: dns.c  dns.h  tcp.c  tcp.h
output/: console.c  console.h
